# job-application-portfolio

./: .gitignore  LICENSE.txt  README.md
climate-control-rf/: README.md  conditionprovider.js  config.json  database.js  main.js  start fan controller.bat  switching.js
coin-tradingbot/: .classpath  .project  README.md
coinfarm-front-end-control-panel/: README.md
fuel economy AI/: test-data.js  training-data.js
fuel-economy-AI/: README.md  (+2 more)
tradingbot-ai-regression-server/: .gitignore  README.md  benchmarks.txt  codeArtifactLogin.sh  downloadS3Bucket_models_silent.sh  pyproject.toml  saveOpenApiDoc.sh  start.sh  startWithScreen_ec2_gpuInference.sh  upgradeCommonClasses.sh
tradingbot-ai-regression-server/config/: DEFAULT.json  ec2-gpuInference-batch.json  local-noGpu.json
tradingbot-ai-regression-server/openapi/: aiRegression-0.0.3_OpenAPISchema-OAS3.0_AutoGenerated.json  aiRegression-0.0.4_OpenAPISchema-OAS3.0_AutoGenerated.json  aiRegression-0.3.1_OpenAPISchema-OAS3.0_AutoGenerated.json  aiRegression-0.3.4_OpenAPISchema-OAS3.0_AutoGenerated.json  pushToApiGateway_aiRegression_nskjylmes1.sh
tradingbot-ai-regression-server/src/: Main.py
tradingbot-ai-regression-server/src/config/: Injectable.py  Loader.py  Logging.py
tradingbot-ai-regression-server/src/model/: ClassReturnMap.py  LiveModel.py  LiveModelCollection.py
tradingbot-ai-regression-server/src/objects/: Config.py  Models.py  Server.py
tradingbot-ai-regression-server/src/server/: CfmCacheBin.py  Controller.py  OpenAPI.py
tradingbot-ai-regression-server/src/util/: FileConstants.py  InputOutput.py
(+257 files in other folders)
